<resources>
    <string name="app_name">Photo Editor</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="no_permission">Sorry, this function requires your permission</string>
    <string name="permission_required">Permission required</string>
    <string name="ask_permission">This app needs permission to access the image storage.</string>
    <string name="brightness">brightness</string>
    <string name="contrast">contrast</string>
    <string name="saturation">saturation</string>
    <string name="gamma">gamma</string>

</resources>
