<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="466dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slBrightness"
        android:layout_width="280dp"
        android:layout_height="3dp"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250.0"
        android:valueTo="250.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        app:layout_constraintVertical_bias="0.532" />

    <TextView
        android:id="@+id/text_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="559dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slContrast"
        android:layout_width="280dp"
        android:layout_height="3dp"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250.0"
        android:valueTo="250.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/text_contrast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrast"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="607dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slSaturation"
        android:layout_width="280dp"
        android:layout_height="3dp"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250.0"
        android:valueTo="250.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/text_saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturation"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="650dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slGamma"
        android:layout_width="280dp"
        android:layout_height="3dp"
        android:stepSize="0.2"
        android:value="1"
        android:valueFrom="0.2"
        android:valueTo="4.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_gamma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamma"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="690dp" />

</androidx.constraintlayout.widget.ConstraintLayout>